# lip-sync-engine

./: .gitignore  .npmignore  CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.github/workflows/: build.yml  publish.yml
docs/: api-reference.md  development.md  getting-started.md  streaming-analysis.md  worker-usage.md
docs/bundler-guides/: README.md  nextjs.md  vite.md  webpack.md
examples/: index.html  stream-example.ts
examples/react/: README.md  index.html  package-lock.json  package.json  vite.config.ts
examples/react/src/: App.css  App.tsx  index.css
examples/react/src/hooks/: useLipSync.ts  useLipSyncEngine.ts
examples/svelte/: README.md  index.html  package.json  vite.config.ts
examples/svelte/public/: visemes
examples/svelte/src/: App.svelte  app.css
examples/svelte/src/stores/: lipSync.ts  lipSyncEngine.ts
examples/vanilla/: README.md  index.html
examples/vue/: README.md  index.html  package.json  vite.config.ts
examples/vue/src/: App.vue
examples/vue/src/composables/: useLipSync.ts  useLipSyncEngine.ts
lib/flite-1.4/src/audio/: au_wasm_stub.c
lib/webrtc-8d2248ff/webrtc/: typedefs.h
scripts/: build-ts.sh  build-wasm.sh
src/cpp/: entry.cpp
src/cpp/animation/: ShapeRule.cpp  animationRules.cpp  roughAnimation.cpp  timingOptimization.cpp
src/cpp/audio/: voiceActivityDetection.cpp
src/cpp/bridge/: audio_utils.cpp  audio_utils.h  bridge.cpp  bridge.h
src/cpp/compat/: boost_compat.h  flite_stubs.c  wasm_platform.h
src/cpp/core/: appInfoStub.cpp
src/cpp/lib/: lipSyncEngineLib.cpp  lipSyncEngineLib.h  lipSyncLib.cpp
src/cpp/recognition/: PocketSphinxRecognizer.cpp  g2p.cpp  languageModels.cpp  tokenization.cpp
src/cpp/time/: Timeline.h
src/cpp/tools/: EnumConverter.h  ProgressBar.cpp  TablePrinter.cpp  platformTools.h  stringTools.cpp  stringTools.h
src/ts/: LipSync.ts  LipSyncEngine.ts  WasmLoader.ts  WorkerPool.ts  index.ts  types.ts  worker.ts
src/ts/utils/: AudioConverter.ts
